--- a/README.Rmd
+++ b/README.Rmd
@@ -19,10 +19,12 @@ remotes::install_github("kuriwaki/ccesMRPrun")
 
 The **main functions** in this package are:
 
-1.  `fit_brms` for fitting a multilevel model (or `fit_brms_binomial`)
-2.  `poststrat_draws` for extracting posterior draws for each area
-3.  `summ_sims` for obtaining summary statistics from these draws
-4.  `scatter_45` for clearly visualizing the relationship between the truth and estimate
+1.  `fit_brms()` for fitting a multilevel model (or `fit_brms_binomial`)
+2.  `poststrat_draws()` for extracting posterior draws for each area
+3.  `summ_sims()` for obtaining summary statistics from these draws
+4.  `scatter_45()` for clearly visualizing the relationship between the truth and estimate
+
+Steps 1-3 can be done via `mrp_onestep()`.
 
 See below for a demonstration with an example in the state of Georgia.
 
@@ -35,24 +37,30 @@ library(tidyverse)
 
 This is a simple wrapper around `brms::brm` but with some custom priors and a binomial model as a default.
 
-```{r, warning=FALSE, message=FALSE}
-form <- "response ~ (1|age) + (1 + female |educ) + clinton_vote + (1|cd)"
+The two key parts of the workflow is a formula and a data. The formula should be a brms formula with a binary variable in the outcome. The data should be individual level data and have all the variables mentioned in the formula. 
 
+```{r}
+form <- response ~ (1|age) + (1 + female |educ) + clinton_vote + (1|cd)
 cc_voters <- filter(cces_GA, vv_turnout_gvm == "Voted")
+```
 
-# turn into counts
+
+Now fit the model. `fit_brms` is basically the `brm` function, but with some wrappers.
+
+```{r, warning=FALSE, message=FALSE}
 fit <- fit_brms(form, cc_voters, verbose = FALSE)
 
-summary(fit)
+class(fit)
 ```
 
 # Poststratification
 
 We can take predicted values from each of the MCMC draws, and aggregate it up to the area of interest.
 
+Here we use the poststratification data to fit _on_. We use the `acs_GA` built-in data here, but refer to [`ccesMRPprep`](www.shirokuriwaki.com/ccesMRPprep) to make a data that is your own.
+
 ```{r}
-drw <- poststrat_draws(fit, 
-                       poststrat_tgt = acs_GA)
+drw <- poststrat_draws(fit, poststrat_tgt = acs_GA)
 drw
 ```
 
@@ -61,19 +69,18 @@ drw
 We often care about the posterior mean and 95 percent credible intervals of the draws.
 
 ```{r}
-summ_sims(drw)
+mrp_val <- summ_sims(drw)
 ```
 
 Append the truth and a baseline raw-sample
 
 ```{r}
-dir_val <- group_by(cc_voters, cd) %>% 
-  summarize(p_raw = mean(response, na.rm = TRUE),
-            p_ygw = weighted.mean(response, weight_post, na.rm = TRUE), 
-            .groups = "drop")
+dir_val <- direct_ests(form, cc_voters, 
+                       area_var = "cd", 
+                       weight_var = "weight_post")
 
 mrp_val <- summ_sims(drw) %>% 
-  left_join(distinct(acs_GA, cd, clinton_vote), by = "cd") %>% 
+  left_join(elec_GA, by = "cd") %>% 
   left_join(dir_val, by = "cd")
 ```
 
@@ -82,9 +89,12 @@ mrp_val <- summ_sims(drw) %>%
 A wrapper for visualizing the accuracy relationship
 
 ```{r mrp-plot, fig.w  = 4, fig.h = 4, fig.align = "center"}
-scatter_45(mrp_val, clinton_vote, p_mrp_est, cd,
+scatter_45(mrp_val, clinton_vote, p_mrp_est, 
+           lblvar = cd,
+           ubvar = p_mrp_900,
+           lbvar = p_mrp_050,
            xlab = "Clinton Vote",
-           ylab = "MRP Estimate")
+           ylab = "MRP Estimate ")
 ```
 
 Compare this with raw estimates:
@@ -98,7 +108,7 @@ gg_raw <- scatter_45(mrp_val, clinton_vote, p_raw, cd,
                      ylim = c(0.19, 0.85), 
                      expand_axes = FALSE)
 
-gg_ygw <- scatter_45(mrp_val, clinton_vote, p_ygw, cd,
+gg_ygw <- scatter_45(mrp_val, clinton_vote, p_wt, cd,
                      xlab = "Clinton Vote",
                      ylab = "Simple Weighted Average",
                      xlim = c(0.19, 0.85),
@@ -113,7 +123,7 @@ It may be easier to store the models in long form and show them at once.
 ```{r long-plot}
 # reshape to long
 mrp_long <- mrp_val %>% 
-    select(cd, p_mrp_est, p_raw, p_ygw, clinton_vote) %>% 
+    select(cd, p_mrp_est, p_raw, p_wt, clinton_vote) %>% 
     pivot_longer(-c(cd, clinton_vote), names_to = "model") 
 
 # plot
@@ -121,7 +131,7 @@ scatter_45(mrp_long,
            clinton_vote, 
            value, 
            by_form = ~model,
-           by_labels = c(p_mrp_est = "MRP", p_raw = "Raw", p_ygw = "YouGov Weighted"),
+           by_labels = c(p_mrp_est = "MRP", p_raw = "Raw", p_wt = "YouGov Weighted"),
            xlab = "Clinton Vote",
            ylab = "Estimate")
 ```
