Avoid R-CMD-check failure

--- a/vignettes/temp_reg-v-poststrat.Rmd
+++ b/vignettes/temp_reg-v-poststrat.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+options(mc.cores = 2) # need to limit cores for CI
 ```
 
 ```{r, message=FALSE}
