--- a/vignettes/temp_reg-v-poststrat.Rmd
+++ b/vignettes/temp_reg-v-poststrat.Rmd
@@ -24,9 +24,9 @@ library(ccesMRPrun)
 library(ccesMRPprep)
 ```
 
-Variables like party ID and religion are not available in the population target. One option is to impute this to the population target through a machine learning model trained on individual data. 
+Variables like party ID and religion are not available in the population target. O
 
-Another option that researchers often use is to include a area-level proportion and simply "control" for that aggregate variable in the regression. This is _not_ the same as poststratification, but we believe that it helps to account for this variable in some way. 
+One option that researchers often use is to include a area-level proportion and simply "control" for that aggregate variable in the regression. This is _not_ the same as poststratification, but we believe that it helps to account for this variable in some way.  (An alternative option, which I examine in the next section is to impute this to the population target through a machine learning model trained on individual data. This strategy introduces some modeling error but still allows for post-stratification.)
 
 We explore this proposition with a simple test case. 
 
@@ -137,4 +137,65 @@ scatter_45(mrp_plot,
 Notice that the second model where we only control for the CD-level aggregate will tighten the estimates around a 45 degree angle, but it does _not_ make the estimates more representative. There is still a bias of the survey undersampling HS-only voters, and controlling for an aggregate does not solve this question.
 
 
+
+## Extensions: Impute-Poststratify
+
+We extend the ACS table assisted by a survey model. See [the function website](https://www.shirokuriwaki.com/ccesMRPprep/reference/impute_cells.html) for details.
+
+```{r}
+acs_synth <- impute_cells(educ ~ female + age,
+                          microdata = cces_GA,
+                          # pretend we don't have education data
+                          poptable = select(acs_df, -educ), 
+                          area_var = "cd") %>% 
+  mutate(count = as.integer(count)) # round
+```
+
+The benefit of this example is that we can examine how our estimated counts of this synthetic table compared with the actual values.
+
+```{r, echo = FALSE}
+library(scales)
+left_join(acs_synth,
+          acs_df, 
+          by = c("cd", "female", "age", "educ"), 
+          suffix = c("_synth", "_truth")) %>% 
+  ggplot(aes(count_truth, count_synth)) +
+  geom_abline(linetype = "dashed") +
+  geom_point(size = 0.5) +
+  coord_equal() +
+  scale_x_continuous(labels = comma) +
+  scale_y_continuous(labels = comma) +
+  labs(x = "True Joint Table Count",
+       y = "Estimated Count in Joint Table Count")
+
+```
+
+The plot does not look great. It is after all perhaps not that surprising that it is hard to estimate education from age bins and gender.
+
+In any case, this allows us to run MRP using this "synthetic" target:
+
+```{r}
+mrp_synth <- mrp_onestep(is_HS ~ (1|educ) + (1|cd),
+                         .data = cces_df, 
+                         poststrat_tgt = acs_synth,
+                         weight_var = "weight",
+                         add_on = val)
+
+```
+
+And examine the outcome.
+
+```{r}
+scatter_45(mrp_synth,
+           prop_HS_truth,
+           p_mrp_est,
+           lbvar = p_mrp_050,
+           ubvar = p_mrp_900,
+           show_error = TRUE,
+           xlab = "True Proportion of Adults with High School - only Education",
+           ylab = "MRP Estimate")
+```
+
+
+These estimates look particularly bad. If the imputation is faulty, it is not a good idea to use that to post-stratify, either.
 
