Move to tic -- this worked pretty quickly in ccesMRPprep

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,8 +5,7 @@ output: github_document
 
 <!-- badges: start -->
 
-[![R build status](https://github.com/kuriwaki/ccesMRPrun/workflows/R-CMD-check/badge.svg)](https://github.com/kuriwaki/ccesMRPrun/actions)
-
+[![tic](https://github.com/kuriwaki/ccesMRPrun/workflows/tic/badge.svg?branch=master)](https://github.com/kuriwaki/ccesMRPrun/actions)
 <!-- badges: end -->
 
 This is a set of functions to facilitate running MRP models on CCES data and is a companion to [`ccesMRPprep`](www.shirokuriwaki.com/ccesMRPprep).
