--- a/vignettes/temp_reg-v-poststrat.Rmd
+++ b/vignettes/temp_reg-v-poststrat.Rmd
@@ -25,13 +25,15 @@ library(ccesMRPrun)
 library(ccesMRPprep)
 ```
 
+
 Variables like party ID and religion are not available in the population target. This is a major challenge in MRP (see Leemann and Wasserfallen, [2017](https://doi.org/10.1111/ajps.12319)).
+
+
+# Approach 1: Aggregate Regression
 
 One option that researchers often use is to include a area-level proportion and simply "control" for that aggregate variable in the regression. This is _not_ the same as poststratification, but we believe that it helps to account for this variable in some way.  (An alternative option, which I examine in the next section is to impute this to the population target through a machine learning model trained on individual data. This strategy introduces some modeling error but still allows for post-stratification.)
 
-We explore this proposition with a simple test case. 
-
-Suppose we want to know the _proportion of a CD's adults that have a high school degree or less_. This quantity is known in the aggregate and in some joint tables through the ACS, so we have a ground truth in this simulation. 
+Let's explore this proposition with a simple test case.  Suppose we want to know the _proportion of a CD's adults that have a high school degree or less_. This quantity is known in the aggregate and in some joint tables through the ACS, so we have a ground truth in this simulation. 
 
 
 First create the dummy variable of interest.
@@ -98,13 +100,14 @@ The ccesMRPrun package will do quick MRP in one step with the `mrp_onestep()` fu
 
 ```{r}
 # run MRP -- only change formulas at each step
-mrp_df <- map_dfr(mrp_forms,
-                  function(x) {
+mrp_df <- map_dfr(.x = mrp_forms,
+                  .f = function(x) {
                     mrp_onestep(x,
                                 cces_df,
                                 poststrat_tgt = acs_df,
                                 weight_var = "weight",
                                 add_on = val, 
+                                verbose = FALSE,
                                 .cores = 2)},
                   .id = "spec")
 mrp_df
@@ -140,66 +143,139 @@ Notice that the second model where we only control for the CD-level aggregate wi
 
 
 
-## Extension: Synthetic Joint Estimation
+# Approach 2: Synthetic Joint Estimation
 
-Instead of including the aggregate information, others might opt to model a synthetic joint distribution. We provide a simple set of functions to implement this. We extend the ACS table assisted by a survey model using a function called [`cceMRPprep::synth_mlogit()`](https://www.shirokuriwaki.com/ccesMRPprep/reference/synth_mlogit.html). 
+
+Instead of including the aggregate information, others might opt to model a synthetic joint distribution.
+
+## Estimating the Synthetic Joint
+
+We provide a simple set of functions to implement this. We extend the ACS table assisted by a survey model using a function called [`cceMRPprep::synth_mlogit()`](https://www.shirokuriwaki.com/ccesMRPprep/reference/synth_mlogit.html). 
 
 ```{r}
-acs_synth <- synth_mlogit(educ ~ female + age,
-                          microdata = cces_GA,
-                          # pretend we don't have education data
-                          poptable = select(acs_df, -educ), 
-                          area_var = "cd") %>% 
-  mutate(count = as.integer(count)) # round
+acs_syn_mlogit <- synth_mlogit(educ ~ female + age,
+                               microdata = cces_GA,
+                               poptable = acs_df,  # internally will be treated as if we don't know education
+                               area_var = "cd")
 ```
 
+
+The ccesMRPprep package provide two other approaches to estimating the joint -- these incorporate another source of information, which is the margins that are available. 
+
+```{r}
+edu_margins <- collapse_table(acs_GA, area_var = "cd", X_vars = "educ", 
+                              count_var = "count", new_name = "count")
+edu_margins
+```
+
+Given this data that is simply the marginal distribution of education in each CD, one option is to simply take the product assuming independence
+
+```{r}
+acs_syn_prod <- synth_prod(educ ~ female + age, 
+                           poptable = acs_GA,
+                           newtable = edu_margins,
+                           area_var = "cd")
+```
+
+and another is to first comibine the survey modeling then fix _those_ margins to the known population margins. 
+
+```{r}
+acs_syn_fix <- synth_smoothfix(educ ~ female + age, 
+                               microdata = cces_GA,
+                               poptable = acs_GA, 
+                               fix_to = edu_margins,
+                               area_var = "cd")
+```
 
 The benefit of this example is that we can examine how our estimated counts of this synthetic table compared with the actual values of the joint distribution. Here is a scatterplot comparing the counts. Each point represents a cell: [14 congressional districts] x [2 gender categories] x [5 age categories] x  [4 education categories].
 
 ```{r, echo = FALSE, message=FALSE,warning=FALSE}
 library(scales)
-left_join(acs_synth,
-          count(acs_df, cd, female, age, educ, wt = count, name = "count"),
-          by = c("cd", "female", "age", "educ"), 
-          suffix = c("_synth", "_truth")) %>% 
-  ggplot(aes(count_truth, count_synth)) +
+
+
+syn_val <- select(acs_syn_prod, cd, female, age, educ, count_rake = count) %>% 
+  left_join(rename(acs_syn_mlogit, count_smooth = count),
+            by = c("cd", "female", "age", "educ")) %>%
+  left_join(rename(acs_syn_fix, count_smoothfix = count),
+            by = c("cd", "female", "age", "educ")) %>%
+  left_join(count(acs_GA, cd, female, educ, age, wt = count, name = "count_truth"),
+            by = c("cd", "female", "age", "educ")) %>% 
+  select(cd, female, age, educ, matches("count_"))
+
+syn_val_long <- syn_val %>% 
+  pivot_longer(c(count_rake, count_smooth, count_smoothfix), 
+               names_to = "method",
+               values_to = "estimate",
+               names_prefix = "count_") %>% 
+  mutate(method = recode_factor(method, 
+                                smooth = "Survey Model\n(synth_mlogit)", 
+                                rake = "Simple Product\n(synth_prod)",
+                                smoothfix = "Survey + Rake\n(synth_smoothfix)"))
+
+syn_val_long %>% 
+  ggplot(aes(count_truth, estimate, color = educ)) +
+  facet_wrap(~ method) +
   geom_abline(linetype = "dashed") +
-  geom_point(size = 0.5) +
+  geom_point(size = 0.5, alpha = 0.5) +
+  theme_bw() +
   coord_equal() +
   scale_x_continuous(labels = comma) +
   scale_y_continuous(labels = comma) +
   labs(x = "True Joint Table Count",
-       y = "Estimated Count in Joint Table Count")
-
+       y = "Estimate",
+       color = "Education of Cell") +
+  theme(legend.position = "bottom", 
+        panel.grid = element_blank())
 ```
 
-The plot does not look great. It is after all perhaps not surprising that it is hard to estimate education from age bins and gender.
+The first plot does not look great. The simple product does surprisingly well. It is after all perhaps not surprising that it is hard to estimate education from age bins and gender.
 
-In any case, this allows us to run MRP using this "synthetic" target:
+## MRP with Synthetic Population
+
+In any case, this allows us to run MRP using this "synthetic" target. Now let's fix the specification and vary the targets
 
 ```{r}
-mrp_synth <- mrp_onestep(is_HS ~ (1|educ) + (1|cd),
-                         .data = cces_df, 
-                         poststrat_tgt = acs_synth,
-                         weight_var = "weight",
-                         add_on = val,
-                         .cores = 2)
+syn_datasets <- list(
+  "survey"       = acs_syn_mlogit,
+  "product"      = acs_syn_prod,
+  "surveyfix"    = acs_syn_fix
+)
+```
+
+
+```{r}
+mrsp_df <- map_dfr(.x = syn_datasets,
+                   .f = function(x) {
+                     mrp_onestep(is_HS ~ (1|educ) + (1|cd),
+                                 cces_df,
+                                 poststrat_tgt = mutate(x, count = as.integer(count)),
+                                 weight_var = "weight",
+                                 add_on = val, 
+                                 verbose = FALSE,
+                                 .cores = 2)},
+                   .id = "synth")
 
 ```
 
 And examine the outcome.
 
-```{r}
-scatter_45(mrp_synth,
-           prop_HS_truth,
-           p_mrp_est,
-           lbvar = p_mrp_050,
-           ubvar = p_mrp_900,
-           show_error = TRUE,
-           xlab = "True Proportion of Adults with High School - only Education",
-           ylab = "MRP Estimate")
+```{r, echo  = FALSE}
+mrsp_df %>% 
+  mutate(synth = recode_factor(synth, 
+                               survey = "Survey Model\n(synth_mlogit)", 
+                               product = "Simple Product\n(synth_prod)",
+                               surveyfix = "Survey + Rake\n(synth_smoothfix)")) %>% 
+  scatter_45(prop_HS_truth,
+             p_mrp_est,
+             by_form = ~synth,
+             lbvar = p_mrp_050,
+             ubvar = p_mrp_900,
+             show_error = TRUE, 
+             xlab = "True Proportion of Adults with High School - only Education",
+             ylab = "MRP Estimate")
 ```
 
 
-These estimates look particularly bad. If the imputation is faulty, it is not a good idea to use that to post-stratify, either.
+The first estimate look bad.  If the imputation is faulty, it is not a good idea to use that to post-stratify, either. The only reason the second and third estimates are perfect is because we asked MRP _for an outcome_ for which we supplied the joint for.  If we were estimating å different outcome for which the margins are not known (which in practice is always the case), the values would change, of course.
+
 
