--- a/vignettes/temp_reg-v-poststrat.Rmd
+++ b/vignettes/temp_reg-v-poststrat.Rmd
@@ -184,6 +184,8 @@ acs_syn_mlogit <- synth_mlogit(educ ~ female + age,
                                area_var = "cd")
 ```
 
+On average, this produces a model where the _margins_ are smoothed out nationally. In the CCES survey sample, `r percent(mean(cces_GA$educ == "HS or Less"))` have a "HS or Less" degree, so it seems like the numbers match that.  This is not surprising because there are CD "fixed effects" not captured by gender and age, but it is nonethless troubling for MRP
+
 
 The ccesMRPprep package provide two other approaches to estimating the joint -- these incorporate another source of information, which is the margins that are available. 
 
