Rerun with not include

--- a/README.Rmd
+++ b/README.Rmd
@@ -3,7 +3,7 @@ title: "Running MRP with CCES"
 output: github_document
 ---
 
-```{r}
+```{r, include = FALSE}
 knitr::opts_chunk$set(fig.path = "man/figures/README-")
 ```
 
