--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,12 @@ knitr::opts_chunk$set(fig.path = "man/figures/README-")
 [![tic](https://github.com/kuriwaki/ccesMRPrun/workflows/tic/badge.svg?branch=master)](https://github.com/kuriwaki/ccesMRPrun/actions)
 <!-- badges: end -->
 
-This is a set of functions to facilitate running MRP models on CCES data and is a companion to [`ccesMRPprep`](www.shirokuriwaki.com/ccesMRPprep).
+Cite as:
+
+* Shiro Kuriwaki (2020). ccesMRPrun: Fitting and Visualizing MRP Models from Cleaned CCES and Census Data. R package. <https://www.github.com/kuriwaki/ccesMRPrun>
+
+
+This is a set of functions to facilitate running MRP models on CCES data and is a companion to [**`ccesMRPprep`**](https://www.shirokuriwaki.com/ccesMRPprep).
 
 To install,
 
@@ -140,4 +145,3 @@ scatter_45(mrp_long,
            ylab = "Estimate")
 ```
 
-![](README_files/figure-gfm/mrp-plot-1.png)
